--- a/src/manifest.json
+++ b/src/manifest.json
@@ -9,6 +9,7 @@
   "browser_action": {
     "default_icon": "icon.png"
   },
+  "options_page": "options.html",
   "permissions": [
     "tabs", "http://news.ycombinator.com/"
   ]
