--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,6 +2,7 @@
   "name": "HN Filter",
   "version": "1.0",
   "description": "Filters stories by karma rating and keywords.",
+  "background_page": "localStorageListener.html",
   "content_scripts": [{
     "matches": ["http://news.ycombinator.com/*", "https://news.ycombinator.com/*"],
     "js": ["filter.js"]
@@ -10,6 +11,7 @@
     "default_icon": "icon.png"
   },
   "options_page": "options.html",
+  "content_security_policy": "default-src 'none'; script-src 'self'",
   "permissions": [
     "tabs", "http://news.ycombinator.com/"
   ]
