--- a/src/manifest.json
+++ b/src/manifest.json
@@ -11,7 +11,7 @@
     "default_icon": "icon.png"
   },
   "options_page": "options.html",
-  "content_security_policy": "default-src 'none'; script-src 'self'",
+  "content_security_policy": "default-src 'self' 'unsafe-inline'", 
   "permissions": [
     "tabs", "http://news.ycombinator.com/"
   ]
