--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,7 @@
   "background_page": "localStorageListener.html",
   "content_scripts": [{
     "matches": ["http://news.ycombinator.com/*", "https://news.ycombinator.com/*"],
-    "js": ["filter.js", "jquery-1.4.2.js"]
+    "js": ["filter.js", "jquery-1.7.1.min.js"]
   }],
   "browser_action": {
     "default_icon": "icon.png"
